fix: add gap on Card flex style

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -6,12 +6,14 @@
   margin: 0;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
   position: relative;
 }
 
 .titleContainer h3 {
   font-family: "Inter-Bold";
   color: var(--gray-900);
+  font-size: 1rem;
   text-align: left;
   margin: 0;
 }
